--- a/cm-client.conf
+++ b/cm-client.conf
@@ -20,7 +20,7 @@ MULTICAST_PORT	7000
 
 # default directory where a client searches for a requested file
 # default directory where a client maintains a downloaded file from a server
-FILE_PATH	C:\Users\yido0\IntelilJ-Workspace\CMApp\client-file-path\u1
+FILE_PATH	C:\Users\yido0\IntelilJ-Workspace\CMApp\client-file-path\user2
 
 # appended file reception scheme (1 or 0)
 # 1: file reception of only the remaining file blocks (append mode)
@@ -31,7 +31,7 @@ FILE_APPEND_SCHEME	1
 # 1: automatic permission of push/pull request
 # 0: no automatic permission of push/pull request (an application should manually
 # respond the request)
-PERMIT_FILE_TRANSFER	0
+PERMIT_FILE_TRANSFER	1
 
 ########## keep-alive strategy
 
